# Turbine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/: manage.py
src/pantry/: admin.py  apps.py  enums.py  managers.py  models.py
src/pantry/migrations/: 0001_initial.py
src/turbine/: asgi.py  settings.py  urls.py  wsgi.py
src/turbine/settings/: base.py  dev.py  prod.py
tasks/: __init__.py  build.py  dev.py  lint.py
