[tool.poetry]
name = "turbine"
version = "0.1.0"
description = "Stop fighting your kitchen. Turbine tracks, suggest, and give you ideas to not just eat, but also enjoy cooking."
authors = ["Valentin Famelart"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
django-environ = "^0.10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
factory-boy = "^3.2.1"
pytest-django = "^4.5.2"
ggshield = "^1.16.0"
ruff = "^0.0.270"
black = "^23.3.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
