[project]
name = "turbine"
version = "0.1.0"
description = "Stop fighting your kitchen. Turbine tracks, suggest, and give you ideas to not just eat, but also enjoy cooking."
authors = [{ name = "Valentin Famelart" }]
requires-python = "~=3.11"
readme = "README.md"
dependencies = [
    "Django~=5.2",
    "django-environ",
]

[dependency-groups]
dev = [
    "pytest",
    "factory-boy",
    "pytest-django",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.isort]
profile = "black"
